envoy-override.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      access_log:
          - name: Envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
      address:
        socket_address: { address: 0.0.0.0, port_value: 8085 }
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                       - match: { prefix: "/protoSound.SoundService" }
                         route:
                           cluster: sound_service
                           timeout: 0s
                           max_stream_duration:
                              grpc_timeout_header_max: 0s
                      # - match: { prefix: "/video_streaming.VideoService" }
                      #   route:
                      #     cluster: video_service
                      #     timeout: 0s
                      #     max_stream_duration:
                      #       grpc_timeout_header_max: 0s
                    cors:
                      allow_origin_string_match:
                        - prefix: "*"
                      allow_methods: GET, PUT, DELETE, POST, OPTIONS
                      allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,access-control-allow-origin
                      max_age: "1728000"
                      expose_headers: custom-header-1,grpc-status,grpc-message
              http_filters:
                - name: envoy.filters.http.grpc_web
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                - name: envoy.filters.http.cors
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: sound_service
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: cluster_0
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: sound_server
                    port_value: 9090
    
    # - name: video_service
    #   connect_timeout: 0.25s
    #   type: logical_dns
    #   http2_protocol_options: {}
    #   lb_policy: round_robin
    #   load_assignment:
    #     cluster_name: cluster_1
    #     endpoints:
    #       - lb_endpoints:
    #         - endpoint:
    #             address:
    #               socket_address:
    #                 address: 172.18.0.7
    #                 port_value: 9090
